# capture

./: .gitignore  Cargo.toml  Dockerfile  build-dmg.sh  build.rs  create_icns.sh  create_key.sh
icons/: AppIcon.icns
src/: Info.plist  audio_recorder.rs  main.rs
